# application/api/controller/User.php
@@ -125,4 +125,75 @@ class User extends Base
 
     }
 
+    /**
+     * @SWG\Get(
+     *     path="/api/User/loginWxxcx?code={code}&encryptedData={encryptedData}&iv={iv}",
+     *     tags={"1-用户管理部分接口"},
+     *     operationId="loginWxxcx",
+     *     summary="1.3-获取用户信息",
+     *     description="获取用户信息(为小程序使用)。code\encryptedData\iv。",
+     *     consumes={"application/json"},
+     *     @SWG\Parameter(
+     *         name="code",
+     *         in="query",
+     *         description="code",
+     *         required=false,
+     *         format="string",
+     *     ),
+     *     @SWG\Parameter(
+     *         name="encryptedData",
+     *         in="query",
+     *         description="encryptedData",
+     *         required=false,
+     *         format="string",
+     *     ),
+     *     @SWG\Parameter(
+     *         name="iv",
+     *         in="query",
+     *         description="iv",
+     *         required=false,
+     *         format="string",
+     *     ),
+     *     produces={"application/json"},
+     *     @SWG\Response(
+     *         response="200",
+     *         description="添加成功",
+     *         @SWG\Schema(ref="#/definitions/ApiResponse")
+     *     ),
+     *     security={{"petstore_auth":{"write:loginWxxcx", "read:loginWxxcx"}}}
+     * )
+     */
+    public function loginWxxcx(Request $request)
+    {
+        $code = $request->param('code');
+        $encryptedData = $request->param('encryptedData');
+        $iv = $request->param('iv');
+
+        $appid = "wx393bffa0355c7f37";
+        $secret = "ea0bbaa3913fa7d74abf7430f249d34a";
+        //appid={$appid}&secret={$secret}&js_code={$code}&grant_type=authorization_code
+        $param = array(
+            'appid' => $appid,
+            'secret' => $secret,
+            'js_code' => $code,
+            'grant_type' => 'authorization_code'
+        );
+        $model = new \app\api\model\User();
+        //http函数为封装的请求函数
+        $res = $model->http("https://api.weixin.qq.com/sns/jscode2session", $param, 'post');
+
+        $arr = json_decode($res, true);
+
+        $result = $model->wxdecode($encryptedData, $iv, $arr['session_key'], $appid);
+
+        //return json($result);
+        if ($result) {
+            return Response::create(['resultCode' => 000, 'resultMsg' => 1], 'json', 200);
+        } else {
+            return Response::create(['resultCode' => 400, 'resultMsg' => -1], 'json', 200);
+        }
+
+    }
+
+
 }
